提交一个有样式的测试

--- a/archives.html
+++ b/archives.html
@@ -41,7 +41,9 @@
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                        <li><a href="/pages/my-first-post.html">My First Test</a></li>
+                        <li >
+                            <a href="/category/test.html">Test</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
@@ -58,6 +60,10 @@
         <h1>Archives for YueRuo's Blog</h1>
 
         <dl>
+                <dt>一 09 十二月 2013</dt>
+                <dd><a href='my-Second-post.html'>My Second Test</a></dd>
+                <dt>一 09 十二月 2013</dt>
+                <dd><a href='my-first-post.html'>My First Test</a></dd>
         </dl>
     </section>
         </div>
