--- a/categories.html
+++ b/categories.html
@@ -41,7 +41,9 @@
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                        <li><a href="/pages/my-first-post.html">My First Test</a></li>
+                        <li >
+                            <a href="/category/test.html">Test</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
@@ -57,6 +59,7 @@
     <section id="categories">
         <h1>Categories for YueRuo's Blog</h1>
         <ul>
+                <li><a href="category/test.html">Test</a></li>
         </ul>
     </section>
         </div>
