--- a/tags.html
+++ b/tags.html
@@ -41,7 +41,9 @@
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                        <li><a href="/pages/my-first-post.html">My First Test</a></li>
+                        <li >
+                            <a href="/category/test.html">Test</a>
+                        </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
@@ -56,7 +58,10 @@
         <div class="col-lg-9">
     <section id="tags">
         <h1>Tags for YueRuo's Blog</h1>
-        <ul>        </ul>
+        <ul>                <li><a href="/tag/publishing.html">publishing</a> (2)</li>
+                <li><a href="/tag/test.html">test</a> (2)</li>
+                <li><a href="/tag/yueruo.html">YueRuo</a> (2)</li>
+        </ul>
     </section>
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
