--- a/archives.html
+++ b/archives.html
@@ -13,19 +13,19 @@
 
             <meta property="og:type" content="website"/>
             <meta property="og:title" content="YueRuo's Blog"/>
-            <meta property="og:url" content=""/>
+            <meta property="og:url" content="http://yueruo.github.io"/>
             <meta property="og:description" content="YueRuo's Blog"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
-    <link href="/theme/css/pygments.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+        <link rel="stylesheet" href="http://yueruo.github.io/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="http://yueruo.github.io/theme/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://yueruo.github.io/theme/css/bootstrap-glyphicons.css" rel="stylesheet">
+    <link href="http://yueruo.github.io/theme/css/pygments.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://yueruo.github.io/theme/css/style.css" type="text/css"/>
     <!-- JavaScript plugins (requires jQuery) -->
     <script src="//code.jquery.com/jquery.min.js"></script>
 
-        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
+        <link href="http://yueruo.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
               title="YueRuo's Blog ATOM Feed"/>
 
     <script type="text/javascript">
@@ -55,17 +55,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="" class="navbar-brand">YueRuo's Blog</a>
+            <a href="http://yueruo.github.io" class="navbar-brand">YueRuo's Blog</a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                        <li><a href="/pages/resume.html">简介</a></li>
+                        <li><a href="http://yueruo.github.io/pages/resume.html">简介</a></li>
                         <li >
-                            <a href="/category/qi-ta.html">其他</a>
+                            <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/archives.html"><i class="icon-th-list"></i>Archives</a></li>
+                <li><a href="http://yueruo.github.io/archives.html"><i class="icon-th-list"></i>Archives</a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -91,7 +91,7 @@
 
 
 
-            <li class="list-group-item"><a href="/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+            <li class="list-group-item"><a href="http://yueruo.github.io/tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
         </ul>
     </section>
 </aside>        </div>
@@ -99,10 +99,10 @@
 </div>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="http://yueruo.github.io/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="http://yueruo.github.io/theme/js/respond.min.js"></script>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'yueruosblog'; // required: replace example with your forum shortname
