--- a/archives.html
+++ b/archives.html
@@ -61,6 +61,9 @@
             <ul class="nav navbar-nav">
                         <li><a href="http://yueruo.github.io/pages/resume.html">简介</a></li>
                         <li >
+                            <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
@@ -79,6 +82,8 @@
         <h1>Archives for YueRuo's Blog</h1>
 
         <dl>
+                <dt>日 22 十二月 2013</dt>
+                <dd><a href='iOS-SuperMethodHide.html'>iOS中屏蔽父类方法</a></dd>
                 <dt>一 02 十二月 2013</dt>
                 <dd><a href='firstblog.html'>搭建Blog完成</a></dd>
         </dl>
