--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
             <ul class="nav navbar-nav">
                         <li><a href="http://yueruo.github.io/pages/resume.html">简介</a></li>
                         <li >
+                            <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
@@ -75,6 +78,13 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9">
+            <article>
+                <h2><a href="http://yueruo.github.io/iOS-SuperMethodHide.html">iOS中屏蔽父类方法</a></h2>
+                <div class="summary"><p>iOS中屏蔽父类方法</p>
+                    <a class="btn btn-default btn-xs" href="http://yueruo.github.io/iOS-SuperMethodHide.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
             <article>
                 <h2><a href="http://yueruo.github.io/firstblog.html">搭建Blog完成</a></h2>
                 <div class="summary"><p>利用Pelican在GithubPages搭建Blog完成</p>
