--- a/categories.html
+++ b/categories.html
@@ -61,6 +61,9 @@
             <ul class="nav navbar-nav">
                         <li><a href="http://yueruo.github.io/pages/resume.html">简介</a></li>
                         <li >
+                            <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
@@ -78,6 +81,7 @@
     <section id="categories">
         <h1>Categories for YueRuo's Blog</h1>
         <ul>
+                <li><a href="category/ioskai-fa.html">iOS开发</a></li>
                 <li><a href="category/qi-ta.html">其他</a></li>
         </ul>
     </section>
