--- a/pages/resume.html
+++ b/pages/resume.html
@@ -60,6 +60,9 @@
             <ul class="nav navbar-nav">
                         <li><a href="http://yueruo.github.io/pages/resume.html">简介</a></li>
                         <li >
+                            <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
