--- a/tags.html
+++ b/tags.html
@@ -61,6 +61,9 @@
             <ul class="nav navbar-nav">
                         <li><a href="http://yueruo.github.io/pages/resume.html">简介</a></li>
                         <li >
+                            <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
@@ -77,7 +80,8 @@
         <div class="col-lg-9">
     <section id="tags">
         <h1>Tags for YueRuo's Blog</h1>
-        <ul>        </ul>
+        <ul>                <li><a href="http://yueruo.github.io/tag/ios.html">iOS</a> (1)</li>
+        </ul>
     </section>
         </div>
         <div class="col-lg-3 well well-sm" id="sidebar">
