--- a/pages/resume.html
+++ b/pages/resume.html
@@ -84,8 +84,9 @@
 
 <p><br>     </p>
 <hr />
-<p>&nbsp;&nbsp;&nbsp;&nbsp;IT从业人员，从事iOS开发工作三年，目前在某外企任移动开发组任组长，负责iOS和Android项目的技术方案确认、开发任务分配和进度把控。<br />
-&nbsp;&nbsp;&nbsp;&nbsp;有已上线AppStore项目四个，其他项目若干。</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;IT从业人员，从事iOS开发工作三年，目前在某外企移动开发组任组长，负责iOS和Android项目的技术方案确认、开发任务分配和进度把控。<br />
+&nbsp;&nbsp;&nbsp;&nbsp;对iOS应用开发有较为丰富的经验，对应用整体架构、网络分层有自己的理解。有自己的小而精的轻量级开发库（GitHub中有少量的开源代码）。<br />
+&nbsp;&nbsp;&nbsp;&nbsp;已上线AppStore项目四个，其他项目若干。</p>
         </div>
     </section>
         </div>
