--- a/categories.html
+++ b/categories.html
@@ -64,6 +64,9 @@
                             <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
                         </li>
                         <li >
+                            <a href="http://yueruo.github.io/category/mian-shi.html">面试</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
@@ -82,6 +85,7 @@
         <h1>Categories for YueRuo's Blog</h1>
         <ul>
                 <li><a href="category/ioskai-fa.html">iOS开发</a></li>
+                <li><a href="category/mian-shi.html">面试</a></li>
                 <li><a href="category/qi-ta.html">其他</a></li>
         </ul>
     </section>
