--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                             <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
                         </li>
                         <li >
+                            <a href="http://yueruo.github.io/category/mian-shi.html">面试</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
@@ -78,6 +81,13 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-9">
+            <article>
+                <h2><a href="http://yueruo.github.io/iOS-NSNotification.html">支付宝电话面试</a></h2>
+                <div class="summary"><p>支付宝电话面试总结</p>
+                    <a class="btn btn-default btn-xs" href="http://yueruo.github.io/iOS-NSNotification.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
             <article>
                 <h2><a href="http://yueruo.github.io/iOS-SuperMethodHide.html">iOS中屏蔽父类方法</a></h2>
                 <div class="summary"><p>iOS中屏蔽父类方法</p>
