--- a/tags.html
+++ b/tags.html
@@ -64,6 +64,9 @@
                             <a href="http://yueruo.github.io/category/ioskai-fa.html">iOS开发</a>
                         </li>
                         <li >
+                            <a href="http://yueruo.github.io/category/mian-shi.html">面试</a>
+                        </li>
+                        <li >
                             <a href="http://yueruo.github.io/category/qi-ta.html">其他</a>
                         </li>
             </ul>
@@ -81,6 +84,7 @@
     <section id="tags">
         <h1>Tags for YueRuo's Blog</h1>
         <ul>                <li><a href="http://yueruo.github.io/tag/ios.html">iOS</a> (2)</li>
+                <li><a href="http://yueruo.github.io/tag/iosmian-shi.html">iOS面试</a> (1)</li>
         </ul>
     </section>
         </div>
