--- a/archives.html
+++ b/archives.html
@@ -85,6 +85,8 @@
         <h1>Archives for YueRuo's Blog</h1>
 
         <dl>
+                <dt>一 19 五月 2014</dt>
+                <dd><a href='iOS-YRUISignal.html'>YRBorderView简介</a></dd>
                 <dt>四 27 三月 2014</dt>
                 <dd><a href='iOS-HHRouter.html'>浅析HHRouter</a></dd>
                 <dt>三 26 三月 2014</dt>
