--- a/archives.html
+++ b/archives.html
@@ -86,7 +86,7 @@
 
         <dl>
                 <dt>一 19 五月 2014</dt>
-                <dd><a href='iOS-YRUISignal.html'>YRBorderView简介</a></dd>
+                <dd><a href='iOS-YRUISignal.html'>YRUISignal简介</a></dd>
                 <dt>四 27 三月 2014</dt>
                 <dd><a href='iOS-HHRouter.html'>浅析HHRouter</a></dd>
                 <dt>三 26 三月 2014</dt>
