--- a/iOS-YRUISignal.html
+++ b/iOS-YRUISignal.html
@@ -3,7 +3,7 @@
       xmlns:og="http://ogp.me/ns#"
       xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
-    <title>YRBorderView简介</title>
+    <title>YRUISignal简介</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <!-- Open Graph tags -->
 
             <meta property="og:type" content="article"/>
-            <meta property="og:title" content="YRBorderView简介"/>
+            <meta property="og:title" content="YRUISignal简介"/>
             <meta property="og:url" content="http://yueruo.github.io/iOS-YRUISignal.html"/>
             <meta property="og:description" content="YRUISignal"/>
 
@@ -87,8 +87,8 @@
                 <h1>
                     <a href="http://yueruo.github.io/iOS-YRUISignal.html"
                        rel="bookmark"
-                       title="Permalink to YRBorderView简介">
-                        YRBorderView简介
+                       title="Permalink to YRUISignal简介">
+                        YRUISignal简介
                     </a>
                 </h1>
             </header>
