--- a/archives.html
+++ b/archives.html
@@ -85,6 +85,8 @@
         <h1>Archives for YueRuo's Blog</h1>
 
         <dl>
+                <dt>四 05 六月 2014</dt>
+                <dd><a href='iOS-SwiftSingleton.html'>Swift学习笔记(基本语法)</a></dd>
                 <dt>一 19 五月 2014</dt>
                 <dd><a href='iOS-YRUISignal.html'>YRUISignal简介</a></dd>
                 <dt>四 27 三月 2014</dt>
