--- a/tags.html
+++ b/tags.html
@@ -83,8 +83,9 @@
         <div class="col-lg-9">
     <section id="tags">
         <h1>Tags for YueRuo's Blog</h1>
-        <ul>                <li><a href="http://yueruo.github.io/tag/ios.html">iOS</a> (5)</li>
+        <ul>                <li><a href="http://yueruo.github.io/tag/ios.html">iOS</a> (6)</li>
                 <li><a href="http://yueruo.github.io/tag/iosmian-shi.html">iOS面试</a> (1)</li>
+                <li><a href="http://yueruo.github.io/tag/swift.html">Swift</a> (1)</li>
         </ul>
     </section>
         </div>
