--- a/archives.html
+++ b/archives.html
@@ -86,7 +86,7 @@
 
         <dl>
                 <dt>四 05 六月 2014</dt>
-                <dd><a href='iOS-SwiftSingleton.html'>Swift学习笔记(基本语法)</a></dd>
+                <dd><a href='iOS-SwiftSingleton.html'>Swift实现单例模式</a></dd>
                 <dt>一 19 五月 2014</dt>
                 <dd><a href='iOS-YRUISignal.html'>YRUISignal简介</a></dd>
                 <dt>四 27 三月 2014</dt>
