--- a/iOS-SwiftSingleton.html
+++ b/iOS-SwiftSingleton.html
@@ -3,7 +3,7 @@
       xmlns:og="http://ogp.me/ns#"
       xmlns:fb="https://www.facebook.com/2008/fbml">
 <head>
-    <title>Swift学习笔记(基本语法)</title>
+    <title>Swift实现单例模式</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -12,7 +12,7 @@
     <!-- Open Graph tags -->
 
             <meta property="og:type" content="article"/>
-            <meta property="og:title" content="Swift学习笔记(基本语法)"/>
+            <meta property="og:title" content="Swift实现单例模式"/>
             <meta property="og:url" content="http://yueruo.github.io/iOS-SwiftSingleton.html"/>
             <meta property="og:description" content="Swift实现单例模式"/>
 
@@ -87,8 +87,8 @@
                 <h1>
                     <a href="http://yueruo.github.io/iOS-SwiftSingleton.html"
                        rel="bookmark"
-                       title="Permalink to Swift学习笔记(基本语法)">
-                        Swift学习笔记(基本语法)
+                       title="Permalink to Swift实现单例模式">
+                        Swift实现单例模式
                     </a>
                 </h1>
             </header>
