--- a/archives.html
+++ b/archives.html
@@ -85,6 +85,8 @@
         <h1>Archives for YueRuo's Blog</h1>
 
         <dl>
+                <dt>三 18 六月 2014</dt>
+                <dd><a href='iOS-YRTransition.html'>YRTransition简介</a></dd>
                 <dt>四 05 六月 2014</dt>
                 <dd><a href='iOS-SwiftSingleton.html'>Swift实现单例模式</a></dd>
                 <dt>一 19 五月 2014</dt>
