--- a/archives.html
+++ b/archives.html
@@ -85,6 +85,10 @@
         <h1>Archives for YueRuo's Blog</h1>
 
         <dl>
+                <dt>日 14 十二月 2014</dt>
+                <dd><a href='iOS-Widget-Data.html'>iOS通知中心插件制作-数据传递</a></dd>
+                <dt>二 25 十一月 2014</dt>
+                <dd><a href='iOS-Widget.html'>iOS通知中心插件制作</a></dd>
                 <dt>三 18 六月 2014</dt>
                 <dd><a href='iOS-YRTransition.html'>YRTransition简介</a></dd>
                 <dt>四 05 六月 2014</dt>
